deployment/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: simple-app
  name: simple-app-ingress
  namespace: default
spec:
  rules:
    - host: "simple.kubernetes.docker.internal"
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/"
          backend:
            service:
              name: simple-app-svc
              port:
                number: 80
